added the all search bar section in main

--- a/style/style.css
+++ b/style/style.css
@@ -194,7 +194,7 @@ section .hero-des{
 /* Flex Container */
 .flex-container{
     display: flex;
-    height: 460px;
+    height: 300px;
     gap: 24px
 
 }
@@ -241,5 +241,46 @@ section .hero-des{
 .share-p {
     font-size: 16px;
     font-weight: bold;
-    
+
+    /*Search bar Section */
+}
+.img-search{
+    background-image: url("../assets/handshake.jpg");
+    background-position: center;
+    background-size: cover;
+    background-color: #000000;
+    width: 1140px;
+    height: 313px;
+    border-radius: 16px;
+    margin: 0 auto;
+}
+.img-title{
+    color: #eeebeb;
+    text-align: center;
+    padding-top: 64px;
+    width: 1044px;
+
+}
+.src-box input{
+    width: 548px;
+    height: 57px;
+    border-radius: 8px;
+
+}
+input::placeholder{
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 400px;
+}
+.src-box button{
+    width: 120px;
+    height: 57px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 500;
+}
+.img-search .src-box{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
