--- a/style/style.css
+++ b/style/style.css
@@ -284,3 +284,13 @@ input::placeholder{
     justify-content: center;
     gap: 16px;
 }
+
+/*Footer Section*/
+
+.foot{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 30px;
+}
